Bug 574820 - URL and Placeholders (e.g. "Go to a Web Site") show at same time in Location Bar after closing Print Preview; r=roc